# sr3200

./: .gitignore  AutoSPI.cpp  AutoSPI.h  BrushModule.cpp  BrushModule.h  BrushModuleDefs.h  BrushlessModule.cpp  BrushlessModule.h  BrushlessModuleDefs.h  Errors.h  FileFunctions.cpp  FileFunctions.h  FindCircle.cpp  FindOffsetPattern.cpp  FindRectangle.cpp  FindTemplate.cpp  GlobalDefs.h  GlobalDefs.h~  GlobalEnum.h  GlobalUtils.cpp  GlobalUtils.h  Makefile.am  Makefile.in  Messages.h  Motor.cpp  Motor.h  MotorModule.cpp  MotorModule.h  README.md  SMAlignment.cpp  SMBase.cpp  SMBase.h  SMCameraFocus.cpp  SMCameraOffset.cpp  SMCameraScale.cpp  SMCameraZero.cpp  SMConveyorEdge.cpp  SMDemomode.cpp  SMEnums.h  SMHardwareTest.cpp  (+134 more)
